# zodbot

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml  zodbot.db
.github/workflows/: deploy.yaml
infra/docker/: Dockerfile.Linux
infra/systemd/: zodbot.service
zodbot/: cache.py  db.py  firestore.py  main.py  pyinstaller.py  test_db.py  utils.py  vector_db.py
zodbot/client/finhub/: __init__.py  client.py  stock_basic_financials.py  stock_info.py  stock_quote.py
zodbot/cogs/: stocks.py  vectors.py
zodbot/config/: __init__.py  config.py
